[gd_scene load_steps=2 format=3 uid="uid://b7y2xkqwj8n5m"]

[ext_resource type="Script" path="res://entities/ui/menu/SettingsMenu.gd" id="1_7m8qx"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7m8qx")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.529412, 0.807843, 0.921569, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Settings"
horizontal_alignment = 1

[node name="MasterVolume" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="VBoxContainer/MasterVolume"]
layout_mode = 2
custom_minimum_size = Vector2(100, 0)
theme_override_font_sizes/font_size = 24
text = "Volume"

[node name="HSlider" type="HSlider" parent="VBoxContainer/MasterVolume"]
layout_mode = 2
custom_minimum_size = Vector2(150, 0)
max_value = 2.0
step = 0.05
value = 1.0

[node name="ValueLabel" type="Label" parent="VBoxContainer/MasterVolume"]
layout_mode = 2
custom_minimum_size = Vector2(50, 0)
theme_override_font_sizes/font_size = 20
text = "100%"

[node name="GameDuration" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="VBoxContainer/GameDuration"]
layout_mode = 2
custom_minimum_size = Vector2(100, 0)
theme_override_font_sizes/font_size = 24
text = "Duration"

[node name="HSlider" type="HSlider" parent="VBoxContainer/GameDuration"]
layout_mode = 2
custom_minimum_size = Vector2(150, 0)
min_value = 30.0
max_value = 300.0
step = 30.0
value = 240.0

[node name="ValueLabel" type="Label" parent="VBoxContainer/GameDuration"]
layout_mode = 2
custom_minimum_size = Vector2(50, 0)
theme_override_font_sizes/font_size = 20
text = "240s"

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "Back"

[connection signal="value_changed" from="VBoxContainer/MasterVolume/HSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/GameDuration/HSlider" to="." method="_on_duration_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]